# annotations2clips

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/annotations2clips/: annotation_reader.py  main.py  utils.py  video_processor.py
tests/: test_annotation_reader.py  test_video_processor.py
tests/test_data/station_1/user_1/: 7acfe8b0-0b2a-49bb-af85-e67885baf693.json  fef69bac-bc6d-47c7-8c8a-bd56ffa0c851.json
tests/test_data/station_1/user_2/: 573ce385-0f6f-4c6b-8730-8130424f7c6f.json
