[project]
name = "annotations2clips"
version = "0.1.0"
description = "A lightweight package to chunk videos into clips based on annotation files."
authors = [
    {name = "Patrick Ruch", email = "ruc@zurich.ibm.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tqdm>=4.25.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "moviepy>=2.2.1",
    "types-tqdm>=4.67.0.20250809",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { where = ["src"], include = ["annotions2clips"] }

[tool.setuptools.package-data]
"annotions2clips" = [
    "py.typed",
    "modeling/resources/train_pipeline_configuration_example.yaml"
]

[tool.uv]
[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
priority = "primary"

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", rev = "master" }

# For extras
[project.optional-dependencies]
modeling = [
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
]
data_analysis = [
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.0.0",
    "pre-commit>=4.0.1",
    "pytest>=7.2.0",
    "pytest-cov>=2.8.1",
    "ruff>=0.7.4",
    "types-setuptools>=57.4.14",
    "detect-secrets",
]

[project.scripts]
convert_annotations_to_clips = "annotations2clips.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.mypy]
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["moviepy.*"]
follow_untyped_imports = true
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
preview = true
select = [
    "E4", 
    "E7", 
    "E9", 
    "F", 
    "W291", 
    "W292", 
    "W505", 
    "E721",
    "I",
    "N801",
    "N802",
    "N803",
    "N804",
    "N805",
    "N806",
    "N816",
    "D101",
    "D102",
    "D103",
    "D105",
    "D106",
    "D107",
    "D300",
    "UP010",
    "UP011",
    "UP019",
    "UP032",
    "ARG",
    "PTH",
    "LOG001",
    "LOG002",
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
